some login view (so far after splash screen)

--- a/WarsawCityGame/app/src/main/AndroidManifest.xml
+++ b/WarsawCityGame/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.LoginActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
