some register screen (very mocked)

--- a/WarsawCityGame/app/src/main/AndroidManifest.xml
+++ b/WarsawCityGame/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity android:name=".Activities.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
+        <activity android:name=".Activities.RegisterActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
