Adding local.properties to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+local.properties
+.idea/workspace.xml
+.idea/libraries
 .DS_Store
-/build
-/captures
+build
+captures
 
 # Built application files
 *.apk
