--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ local.properties
 .idea/workspace.xml
 .idea/libraries
 .DS_Store
-build
-captures
+build/
+captures/
 
 # Built application files
 *.apk
