--- a/WarsawCityGame/app/src/main/AndroidManifest.xml
+++ b/WarsawCityGame/app/src/main/AndroidManifest.xml
@@ -36,11 +36,10 @@
         </activity>
         <activity
             android:name=".Activities.LoginActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".Activities.RegisterActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
-
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
