--- a/WarsawCityGameServer/WarsawCityGamesServer.Entities/App.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Entities/App.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <entityFramework>
@@ -10,4 +9,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<connectionStrings> 
+  <add name="CityGamesContext"  
+        providerName="System.Data.SqlClient"  
+        connectionString="Server=tcp:warsawcitygame.database.windows.net,1433;Database=WarsawCityGameDatabase;User ID=tygrysek@warsawcitygame;Password=Turing1!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/> 
+	</connectionStrings>
 </configuration>
