--- a/WarsawCityGameServer/WarsawCityGamesServer.Services/packages.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Services/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net452" />
+  <package id="Autofac.Configuration" version="3.3.0" targetFramework="net452" />
+  <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net452" />
@@ -14,5 +18,9 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="NLog" version="3.2.1" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Purplelight.Framework.Autofac.Integration.WebApi" version="0.2.2" targetFramework="net452" />
 </packages>
