--- a/WarsawCityGameServer/WarsawCityGamesServer.Services/Web.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Services/Web.config
@@ -11,6 +11,7 @@
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
+	<customErrors mode="Off" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
