database changing (introduction to ASP.NET Indentity), registering method, automapper, injection of cool stuff

--- a/WarsawCityGameServer/WarsawCityGamesServer.Entities/App.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Entities/App.config
@@ -12,6 +12,6 @@
 <connectionStrings> 
   <add name="CityGamesContext"  
         providerName="System.Data.SqlClient"  
-        connectionString="Server=tcp:warsawcitygame.database.windows.net,1433;Database=WarsawCityGameDatabase;User ID=tygrysek@warsawcitygame;Password=Turing1!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/> 
+        connectionString="Server=tcp:warsawcitygame.database.windows.net,1433;Database=WarsawCityGameDatabase;Player ID=tygrysek@warsawcitygame;Password=Turing1!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/> 
 	</connectionStrings>
 </configuration>
