Logging and registration configuration (server and android). It works but kind of bugged (no validation on both sides).

--- a/WarsawCityGame/settings.gradle
+++ b/WarsawCityGame/settings.gradle
@@ -1,1 +1,1 @@
-include ':WarsawCityGames.App', ':WarsawCityGames.Communication', ':WarsawCityGames.Shared'
+include ':WarsawCityGames.App', ':WarsawCityGames.Communication', ':WarsawCityGames.Shared', ':WarsawCityGames.Models', ':WarsawCityGames.Communication'
