--- a/WarsawCityGame/WarsawCityGames.App/src/main/AndroidManifest.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name="com.warsawcitygame.Utils.MyApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name=".Activities.SplashActivity"
