--- a/WarsawCityGame/warsawcitygames.models/build.gradle
+++ b/WarsawCityGame/warsawcitygames.models/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -22,13 +21,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    apt "com.google.dagger:dagger-compiler:2.0.1"
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'javax.annotation:jsr250-api:1.0'
-    compile 'com.squareup.okhttp:okhttp:2.6.0'
-    compile project(':WarsawCityGames.Models')
-    compile 'com.google.dagger:dagger:2.0.1'
-    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
