--- a/WarsawCityGame/warsawcitygames.models/src/main/AndroidManifest.xml
+++ b/WarsawCityGame/warsawcitygames.models/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.warsawcitygamescommunication"
+<manifest package="com.warsawcitygames.models"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
