--- a/WarsawCityGameServer/WarsawCityGamesServer.Services/packages.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Services/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="Autofac.Configuration" version="3.3.0" targetFramework="net452" />
+  <package id="Autofac.Owin" version="3.1.0" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
+  <package id="Autofac.WebApi2.Owin" version="3.3.0" targetFramework="net452" />
   <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
