--- a/WarsawCityGameServer/WarsawCityGamesServer.Models/WarsawCityGamesServer.Models.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Models/WarsawCityGamesServer.Models.csproj
@@ -37,6 +37,13 @@
   <ItemGroup>
     <Compile Include="Players\PlayerRegisterDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserData\PlayerDataDto.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WarsawCityGamesServer.Entities\WarsawCityGamesServer.Entities.csproj">
+      <Project>{C45CA7DC-FE60-4C69-B6FA-6F8C96B3A560}</Project>
+      <Name>WarsawCityGamesServer.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
