--- a/WarsawCityGameServer/WarsawCityGamesServer.Models/WarsawCityGamesServer.Models.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Models/WarsawCityGamesServer.Models.csproj
@@ -36,7 +36,7 @@
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Missions\SetCurrentMissionDto.cs" />
+    <Compile Include="Missions\PlayerMissionDto.cs" />
     <Compile Include="Players\PlayerRegisterDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData\PlayerDataDto.cs" />
