--- a/WarsawCityGameServer/WarsawCityGamesServer.Models/WarsawCityGamesServer.Models.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Models/WarsawCityGamesServer.Models.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Missions\CurrentMissionDto.cs" />
     <Compile Include="Missions\PlayerMissionDto.cs" />
     <Compile Include="Players\PlayerRegisterDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
