--- a/WarsawCityGameServer/WarsawCityGamesServer.DataAccess/WarsawCityGamesServer.DataAccess.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.DataAccess/WarsawCityGamesServer.DataAccess.csproj
@@ -50,8 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccessServices\Instances\PlayerService.cs" />
+    <Compile Include="DataAccessServices\Instances\UserProfileService.cs" />
     <Compile Include="DataAccessServices\Interfaces\IPlayerService.cs" />
+    <Compile Include="DataAccessServices\Interfaces\IUserProfileService.cs" />
     <Compile Include="GenericRepository\GenericRepository.cs" />
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
