--- a/WarsawCityGameServer/WarsawCityGamesServer.Tests/WarsawCityGamesServer.Tests.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Tests/WarsawCityGamesServer.Tests.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MockHelper.cs" />
     <Compile Include="MockDbSetHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserProfileTests.cs" />
