databse connection strings update (i push it just because of lazy butts of my teammates)

--- a/WarsawCityGameServer/WarsawCityGamesServer.Services/Web.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Services/Web.config
@@ -77,7 +77,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CityGamesContext" providerName="System.Data.SqlClient" connectionString="Server=tcp:warsawcitygame.database.windows.net,1433;Database=WarsawCityGameDatabase;User ID=tygrysek@warsawcitygame;Password=Turing1!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+    <add name="CityGamesContext" providerName="System.Data.SqlClient" connectionString="Server=tcp:warsawsleeptime.database.windows.net,1433;Data Source=warsawsleeptime.database.windows.net;Initial Catalog=warsawcitygame;Persist Security Info=False;User ID=tygrysek;Password=Turing1!;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>	  
+
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
