--- a/WarsawCityGameServer/WarsawCityGamesServer.Entities/App.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Entities/App.config
@@ -12,6 +12,6 @@
 <connectionStrings> 
   <add name="CityGamesContext"  
         providerName="System.Data.SqlClient"  
-        connectionString="Server=tcp:warsawcitygame.database.windows.net,1433;Database=WarsawCityGameDatabase;Player ID=tygrysek@warsawcitygame;Password=Turing1!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/> 
+        connectionString="Server=tcp:warsawsleeptime.database.windows.net,1433;Data Source=warsawsleeptime.database.windows.net;Initial Catalog=warsawcitygame;Persist Security Info=False;User ID=tygrysek;Password=Turing1!;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>	  
 	</connectionStrings>
 </configuration>
