the final fix (& i started doing sth on client)

--- a/WarsawCityGameServer/WarsawCityGamesServer.Services/WarsawCityGamesServer.Services.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Services/WarsawCityGamesServer.Services.csproj
@@ -200,6 +200,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MissionController.cs" />
     <Compile Include="Controllers\PlayersController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\UserProfileController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -213,6 +214,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Service References\Application Insights\ConnectedService.json" />
+    <None Include="Properties\PublishProfiles\warsawcitygames - FTP %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygames - Web Deploy %282%29.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
