--- a/WarsawCityGameServer/WarsawCityGamesServer.Services/Web.config
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Services/Web.config
@@ -12,6 +12,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+	 <customErrors mode="Off"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
@@ -81,4 +82,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="CityGamesContext"
+			  providerName="System.Data.SqlClient"
+			  connectionString="Server=tcp:warsawsleeptime.database.windows.net,1433;Data Source=warsawsleeptime.database.windows.net;Initial Catalog=warsawcitygame;Persist Security Info=False;User ID=tygrysek;Password=Turing1!;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
+	</connectionStrings>
 </configuration>
